[package]
name = "bot-grpc-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "signal"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dashmap = "6"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-stream = "0.1"
uuid= { version = "1", features = ["v4"] }
rand = "0.9"

[build-dependencies]
tonic-build = "0.12"
